--- a/Covid_19_part_I.ipynb
+++ b/Covid_19_part_I.ipynb
@@ -4131,7 +4131,7 @@
     "\n",
     "I'll start by looking at the distribution of the main variables of interest:\n",
     "- Qualitative variables : `country`,`continent`, `year`\n",
-    "- Quanntitative variables : `total_cases`, `total_death`, `new_deaths`, `total_recovered`, `serious_critical`,`total_tests`, `tests_per_million`, `population`"
+    "- Quantitative variables : `total_cases`, `total_death`, `new_deaths`, `total_recovered`, `serious_critical`,`total_tests`, `tests_per_million`, `population`"
    ]
   },
   {
@@ -4896,7 +4896,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aed9e5c8",
+   "id": "b886f203",
    "metadata": {},
    "source": [
     "There is no big differences between the number of deaths in 2019 and 2022. But that a good point. That proves the efficiency of vaccines and health barrier measures. We arrived to contain the mortal side of virus."
@@ -4954,7 +4954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1faa55e",
+   "id": "b395cf96",
    "metadata": {},
    "source": [
     "The number of critical cases exploded in 2022, especially in many african countries and in Europe."
@@ -5346,7 +5346,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "5d9e0313",
+   "id": "2588172d",
    "metadata": {},
    "outputs": [
     {
@@ -5395,7 +5395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4464c38",
+   "id": "935371d9",
    "metadata": {},
    "source": [
     "The number of deaths exploded in 2022 in orange zone (>100 and <1000 cases per million inhabitants). "
@@ -5456,7 +5456,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "79144912",
+   "id": "4f0916e1",
    "metadata": {},
    "outputs": [
     {
@@ -5505,7 +5505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a796e49",
+   "id": "712548f1",
    "metadata": {},
    "source": [
     "We can see that the number of critical cases has increased in the orange zone and in the red zone. Probably, the people who unfortunately could not resist died."
@@ -5514,7 +5514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baeffcf6",
+   "id": "b3135e14",
    "metadata": {},
    "outputs": [],
    "source": []
