--- a/Covid_19_part_I.ipynb
+++ b/Covid_19_part_I.ipynb
@@ -4896,7 +4896,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b886f203",
+   "id": "4b33e228",
    "metadata": {},
    "source": [
     "There is no big differences between the number of deaths in 2019 and 2022. But that a good point. That proves the efficiency of vaccines and health barrier measures. We arrived to contain the mortal side of virus."
@@ -4954,7 +4954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b395cf96",
+   "id": "ddcfc9b9",
    "metadata": {},
    "source": [
     "The number of critical cases exploded in 2022, especially in many african countries and in Europe."
@@ -5346,7 +5346,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "2588172d",
+   "id": "76bc5faa",
    "metadata": {},
    "outputs": [
     {
@@ -5395,7 +5395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "935371d9",
+   "id": "d1587a3c",
    "metadata": {},
    "source": [
     "The number of deaths exploded in 2022 in orange zone (>100 and <1000 cases per million inhabitants). "
@@ -5454,9 +5454,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c36ac017",
+   "metadata": {},
+   "source": [
+    "In 2022 we have more recovered especially in orange and green zone. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "4f0916e1",
+   "id": "7d71526f",
    "metadata": {},
    "outputs": [
     {
@@ -5505,7 +5513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "712548f1",
+   "id": "78f3ab6c",
    "metadata": {},
    "source": [
     "We can see that the number of critical cases has increased in the orange zone and in the red zone. Probably, the people who unfortunately could not resist died."
@@ -5514,7 +5522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3135e14",
+   "id": "69956664",
    "metadata": {},
    "outputs": [],
    "source": []
